# IBLBaker

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  IblBaker.bat  LICENSE  README.md
data/: ShaderManifest.xml  iblBakerConfig.xml
data/fonts/: arial.14.fnt
data/meshes/pistol/: pistol.fbx  pistol.material  pistol.mtl
data/meshes/shaderBall/: shaderBall.fbx
data/meshes/sphere/: iblsphere.material  sphere.mtl  (+2 more)
data/shadersD3D11/: IblBrdf.hlsl  IblColorConvertEnvironment.fx  IblColorResolve.fx  IblDepthResolve.fx  IblEnvironmentSphere.fx  IblEnvironmentSphereSpherical.fx  IblFXAA.fx  IblHDRPresentation.fx  IblImageBlit.fx  IblImportanceSamplingDiffuse.fx  IblImportanceSamplingSpecular.fx  IblPBRDebug.fx  IblProjectParaboloidToEnvironment.fx  IblSimpleShader.fx  IblSinglePassDualProjection.fx  IblSinglePassEnvironment.fx  IblSinglePassSphericalEnvironment.fx  IblSpriteShader.fx  IblTitles.fx  imgui_color.fx  imgui_cubemap.fx  imgui_image.fx  imgui_image_swizz.fx  imgui_texture.fx  nanovg_fill.fx  ocornut_imgui.fx  schlick.brdf  smith.brdf  template.fx
maya/: BackgroundSurface.cgfx  IblSurface.cgfx  IblSurfaceConst.cgfx  README.txt  brdf.dds  brdfMDR.dds  paperMillDiffuseMDR.dds
maya/.mayaSwatches/: brdf.dds.swatch  brdfMDR.dds.swatch  paperMillEnvMDR.dds.swatch  paperMillSpecularMDR.dds.swatch
src/: IBLBaker.sln  IBLBaker.vcxproj  IBLBaker.vcxproj.derkreature.nvuser  IBLBaker.vcxproj.filters  IblApplication.cpp  IblApplication.h  IblApplicationHUD.cpp  IblApplicationHUD.h  main.cpp
src/application/: IblApplication.cpp  IblApplication.h  IblApplicationHUD.cpp  IblApplicationHUD.h  IblHash.cpp  IblHash.h  IblLog.cpp  IblLog.h  IblMath.h  IblNonCopyable.h  IblPlatform.h  IblTimer.cpp  IblTimer.h  IblTitles.cpp  IblTitles.h  IblWindow.cpp  IblWindow.h
src/codecs/: IblBitwise.h  IblCodec.cpp  IblCodec.h  IblColorValue.cpp  IblColorValue.h  IblColourValue.cpp  IblColourValue.h  IblDDSCodec.cpp  IblDDSCodec.h  IblDataStream.cpp  IblDataStream.h  IblFreeImageCodec.cpp  IblFreeImageCodec.h  IblImageCodec.h  IblIteratorRange.h  IblIteratorWrapper.h  IblPixelConversions.h  IblPixelFormat.cpp  IblPixelFormat.h  IblStringUtilities.cpp  IblStringUtilities.h  IblTextureImage.cpp  IblTextureImage.h
src/input/: IblCameraManager.cpp  IblCameraManager.h  IblComPtr.h  IblDampenedInput.cpp  IblDampenedInput.h  IblFocusedInput.cpp  IblFocusedInput.h  IblFocusedMovement.cpp  IblFocusedMovement.h  IblInput.cpp  IblInput.h  IblInputManager.cpp  IblInputManager.h  IblInputState.cpp  IblInputState.h  IblX360Controller.cpp  IblX360Controller.h
src/math/: IblColor.h  IblLimits.h  IblMatrix44.h  IblMatrixAlgo.h  IblQuaternion.h  IblRegion.h  IblVector2.h  IblVector3.h  IblVector4.h
src/newui/: IblUIRenderer.cpp  IblUIRenderer.h  Iblimgui.cpp  Iblimgui.h  Iblnanovg.cpp  ocornut_imgui.cpp  ocornut_imgui.h
src/nodes/: IblBrdf.cpp  IblBrdf.h  IblCamera.cpp  IblCamera.h  IblEntity.cpp  IblEntity.h  IblIndexedMesh.cpp  IblIndexedMesh.h  IblMesh.cpp  IblMesh.h  IblNode.cpp  IblNode.h  IblProjectionProperty.cpp  IblProjectionProperty.h  IblProperty.cpp  IblProperty.h  IblRenderNode.cpp  IblRenderNode.h  IblRenderTargetQuad.cpp  IblRenderTargetQuad.h  IblRenderTextureProperty.cpp  IblRenderTextureProperty.h  IblScene.cpp  IblScene.h  IblStreamedMesh.cpp  IblStreamedMesh.h  IblTransformNode.cpp  IblTransformNode.h  IblTransformProperty.cpp  IblTransformProperty.h  IblTypedProperty.h  IblViewProperty.cpp  IblViewProperty.h  IblViewportProperty.cpp  IblViewportProperty.h
src/renderAPI/: IblAssetManager.cpp  IblAssetManager.h  IblColorPass.cpp  IblColorPass.h  IblColorResolve.cpp  IblColorResolve.h  IblDepthResolve.cpp  IblDepthResolve.h  IblFileChangeWatcher.cpp  IblFileChangeWatcher.h  IblFilterCubemap.cpp  IblFilterCubemap.h  IblFrameBuffer.cpp  IblFrameBuffer.h  IblGpuConstantBuffer.cpp  IblGpuConstantBuffer.h  IblGpuTechnique.cpp  IblGpuTechnique.h  IblGpuVariable.cpp  IblGpuVariable.h  IblHDRPresentationPolicy.cpp  IblHDRPresentationPolicy.h  IblIBLProbe.cpp  IblIBLProbe.h  IblIBLRenderPass.cpp  IblIBLRenderPass.h  IblIComputeShader.cpp  IblIComputeShader.h  IblIDepthSurface.cpp  IblIDepthSurface.h  IblIDevice.cpp  IblIDevice.h  IblIEffect.cpp  IblIEffect.h  IblIGpuBuffer.cpp  IblIGpuBuffer.h  IblIIndexBuffer.cpp  IblIIndexBuffer.h  IblIRenderResource.cpp  IblIRenderResource.h  (+43 more)
src/rendererD3D11/: IblBackbufferSurfaceD3D11.cpp  IblBackbufferSurfaceD3D11.h  IblBufferD3D11.cpp  IblBufferD3D11.h  IblComputeShaderD3D11.cpp  IblComputeShaderD3D11.h  IblDepthSurfaceD3D11.cpp  IblDepthSurfaceD3D11.h  IblEffectD3D11.cpp  IblEffectD3D11.h  IblFormatConversionD3D11.cpp  IblFormatConversionD3D11.h  IblGpuConstantBufferD3D11.cpp  IblGpuConstantBufferD3D11.h  IblGpuTechniqueD3D11.cpp  IblGpuTechniqueD3D11.h  IblGpuVariableD3D11.cpp  IblGpuVariableD3D11.h  IblIndexBufferD3D11.cpp  IblIndexBufferD3D11.h  IblInputLayoutCacheD3D11.cpp  IblInputLayoutCacheD3D11.h  IblRenderDeviceD3D11.cpp  IblRenderDeviceD3D11.h  IblRenderTargetTextureD3D11.cpp  IblRenderTargetTextureD3D11.h  IblRenderWindow.cpp  IblRenderWindow.h  IblRenderWindowD3D11.cpp  IblRenderWindowD3D11.h  IblShaderD3D11.cpp  IblShaderD3D11.h  IblSurfaceD3D11.cpp  IblSurfaceD3D11.h  IblTexture2DD3D11.cpp  IblTexture2DD3D11.h  IblTextureD3D11.cpp  IblTextureD3D11.h  IblVertexBufferD3D11.cpp  IblVertexBufferD3D11.h  (+2 more)
src/resources/: IBLBaker.rc  IBLBaker.res  resource.h
src/ui/: IblButton.cpp  IblButton.h  IblCheckBox.cpp  IblCheckBox.h  IblComboBox.cpp  IblComboBox.h  IblControl.cpp  IblControl.h  IblDialogBase.cpp  IblDialogBase.h  IblDialogResourceManager.cpp  IblDialogResourceManager.h  IblDynamicRenderer.cpp  IblDynamicRenderer.h  IblEditBox.cpp  IblEditBox.h  IblFont.cpp  IblFont.h  IblFontMgr.cpp  IblFontMgr.h  IblImageWidget.cpp  IblImageWidget.h  IblListBox.cpp  IblListBox.h  IblRadioButton.cpp  IblRadioButton.h  IblRenderHUD.cpp  IblRenderHUD.h  IblScrollBar.cpp  IblScrollBar.h  IblSlider.cpp  IblSlider.h  IblSprite.cpp  IblSprite.h  IblStatic.cpp  IblStatic.h  IblWidgetAPI.h  IblWidgetDialog.cpp  IblWidgetDialog.h  IblWidgetTypes.cpp  (+3 more)
(+107 files in other folders)
